--- a/index.html
+++ b/index.html
@@ -190,7 +190,18 @@
               
                 <div class="text-center"><button type="submit">Reservar Visita</button></div>
               </form>
-
+              <br>
+              <br>
+              <div class="d-flex justify-content-center">
+            
+                <div class="clock">
+                  <h2 class="text-center">Fecha y hora actual:</h2>
+                  <span class="date"></span> |
+                  <span class="hours"></span> :
+                  <span class="minutes"></span> :
+                  <span class="seconds"></span>
+                </div>
+            </div>
             </div>
           </div>
 
