Añadí 2 imágenes al index y puse descripciónes en la galeria de imagenes

--- a/index.html
+++ b/index.html
@@ -131,16 +131,22 @@
           <div class="col-lg-6 order-lg-2 order-2">
             
           </div>
-          <div class="icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
+          <div class="icon-box aos-init" data-aos="fade-up" data-aos-delay="100" >
             <div class="icon"><i class="bi bi-briefcase"></i></div>
             <h4 class="title"><a href="">¿Qué hacemos?</a></h4>
             <p class="description">En Grupo Cero, nos dedicamos a la creación de arte en diversas expresiones artísticas y ofrecemos nuestros productos para la venta en esta página con el fin de compartir nuestra pasión y hacer llegar nuestras creaciones a un público más amplio.</p>
+            <div style="height: 30vh; display: flex; justify-content: center; align-items: center;">
+              <img class="img-fluid mx-auto w-90" src="img/wedo.png" alt="" style="display: block; margin: 0 auto; object-fit: cover; height: 80%; width: 100%; max-width: 90%;" >
+            </div>
           </div>
 
-          <div class="icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
+          <div class="icon-box aos-init" data-aos="fade-up" data-aos-delay="200" >
             <div class="icon"><i class="bi bi-card-checklist"></i></div>
             <h4 class="title"><a href="">Confianza</a></h4>
-            <p class="description">En Grupo Cero, nos esforzamos por garantizar la calidad y autenticidad de cada una de nuestras piezas artísticas. Trabajamos con los mejores materiales y técnicas, y nuestra experiencia y dedicación nos permiten crear obras únicas y de alta calidad.</p>
+            <p class="description" >En Grupo Cero, nos esforzamos por garantizar la calidad y autenticidad de cada una de nuestras piezas artísticas. Trabajamos con los mejores materiales y técnicas, y nuestra experiencia y dedicación nos permiten crear obras únicas y de alta calidad.</p>
+            <div style="height: 30vh; display: flex; justify-content: center; align-items: center;">
+              <img class="img-fluid mx-auto w-90" src="img/trust.png" alt="" style="display: block; margin: 0 auto; object-fit: cover; height: 80%; width: 100%; max-width: 90%;">
+            </div>
           </div>
           
         </div>
