--- a/galeria.html
+++ b/galeria.html
@@ -83,7 +83,7 @@
                       </a>
                       <div class="portfolio-caption">
                           <div class="portfolio-caption-heading">Titulo</div>
-                          <div class="portfolio-caption-subheading text-muted">detalle</div>
+                          <div class="portfolio-caption-subheading text-muted">una pieza funcional que combina diseño y utilidad en un objeto elegante y sofisticado.</div>
                       </div>
                   </div>
               </div>
@@ -98,7 +98,7 @@
                       </a>
                       <div class="portfolio-caption">
                           <div class="portfolio-caption-heading">Titulo</div>
-                          <div class="portfolio-caption-subheading text-muted">detalle</div>
+                          <div class="portfolio-caption-subheading text-muted">una silla minimalista y elegante que combina diseño y funcionalidad. Perfecta para cualquier espacio moderno</div>
                       </div>
                   </div>
               </div>
@@ -113,7 +113,7 @@
                       </a>
                       <div class="portfolio-caption">
                           <div class="portfolio-caption-heading">Titulo</div>
-                          <div class="portfolio-caption-subheading text-muted">detalle</div>
+                          <div class="portfolio-caption-subheading text-muted">una obra de arte única y sofisticada que desafía las convenciones del diseño tradicional de botellas</div>
                       </div>
                   </div>
               </div>
@@ -128,7 +128,7 @@
                       </a>
                       <div class="portfolio-caption">
                           <div class="portfolio-caption-heading">Titulo</div>
-                          <div class="portfolio-caption-subheading text-muted">detalle</div>
+                          <div class="portfolio-caption-subheading text-muted">un objeto práctico y estilizado que aporta un toque de diseño a cualquier espacio de almacenamiento</div>
                       </div>
                   </div>
               </div>
@@ -143,7 +143,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Titulo</div>
-                        <div class="portfolio-caption-subheading text-muted">detalle</div>
+                        <div class="portfolio-caption-subheading text-muted">una obra de arte que transmite una emoción y una historia, con una composición muy cuidadosa</div>
                     </div>
                 </div>
             </div>
@@ -158,7 +158,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Titulo</div>
-                        <div class="portfolio-caption-subheading text-muted">detalle</div>
+                        <div class="portfolio-caption-subheading text-muted">Una obra de arte abstracta que combina patrones y colores en una composición armoniosa. Perfecto para dar vida a cualquier pared</div>
                     </div>
                 </div>
             </div>
@@ -173,7 +173,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Titulo</div>
-                        <div class="portfolio-caption-subheading text-muted">detalle</div>
+                        <div class="portfolio-caption-subheading text-muted"> pieza de cerámica que combina belleza y funcionalidad. Con un diseño elegante y acabado suave, este bowl es perfecto para cualquier mesa</div>
                     </div>
                 </div>
             </div>
@@ -188,7 +188,7 @@
                       </a>
                       <div class="portfolio-caption">
                           <div class="portfolio-caption-heading">Titulo</div>
-                          <div class="portfolio-caption-subheading text-muted">detalle</div>
+                          <div class="portfolio-caption-subheading text-muted"> pieza de cerámica que combina belleza y funcionalidad. Con un diseño elegante y acabado suave, este bowl es perfecto para cualquier mesa</div>
                       </div>
                   </div>
               </div>
@@ -203,7 +203,7 @@
                       </a>
                       <div class="portfolio-caption">
                           <div class="portfolio-caption-heading">Titulo</div>
-                          <div class="portfolio-caption-subheading text-muted">detalle</div>
+                          <div class="portfolio-caption-subheading text-muted"> pieza de cerámica que combina belleza y funcionalidad. Con un diseño elegante y acabado suave, este bowl es perfecto para cualquier mesa</div>
                       </div>
                   </div>
               </div>
