se modifico la vision

--- a/nosotros.html
+++ b/nosotros.html
@@ -104,6 +104,36 @@
         <br>
         <br>
         <br>
+        <h2 id="vision" class="text-center">
+          <strong>Nuestra Visión</strong>
+        </h2>
+        <br>
+        <div class="container aos-init aos-animate" data-aos="fade-up">
+          <div class="row about-container">
+            <div class="col-lg-6 content order-lg-2 order-2" style="text-align: right;">
+              <p>
+                &nbsp;&nbsp;
+                Nuestra visión es ser reconocidos a nivel nacional e internacional como un colectivo 
+                vanguardista y de renombre en el arte plástico, trascendiendo las fronteras convencionales del
+                 arte. Buscamos desafiar las normas, explorar nuevas formas de expresión y crear obras que generen
+                  un impacto significativo en la sociedad. Queremos romper barreras, fomentar la apreciación del 
+                  arte en todas sus formas y enriquecer culturalmente nuestras comunidades.
+              </p>
+              <p>
+                &nbsp;&nbsp;
+                Además, aspiramos a ser una fuente de inspiración para las generaciones futuras, 
+                apoyando a jóvenes artistas y promoviendo la responsabilidad social y el compromiso con el
+                 medio ambiente. En resumen, nuestra visión es establecer a Grupo Cero como un referente 
+                 global en el arte, reconocidos por nuestra originalidad, innovación y compromiso social, y 
+                 dejando un legado perdurable en la sociedad.
+              </p>
+            </div>
+          </div>
+        </div>
+        
+        <br>
+        <br>
+        <br>
       <div class="container">
           <div class="embed-responsive embed-responsive-16by9">
               <iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/DTrTC-OCvXY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
