Limpieza de material que no tenia uso

--- a/galeria.html
+++ b/galeria.html
@@ -27,13 +27,7 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Regna
-  * Updated: Mar 10 2023 with Bootstrap v5.2.3
-  * Template URL: https://bootstrapmade.com/regna-bootstrap-onepage-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+
 </head>
 
 <body>
@@ -44,8 +38,6 @@
 
       <div id="logo">
         <h1><a href="index.html">GrupoCero</a></h1>
-        <!-- Uncomment below if you prefer to use a text logo -->
-        <!--<h1><a href="index.html">Regna</a></h1>-->
       </div>
 
       <nav id="navbar" class="navbar">
@@ -83,7 +75,7 @@
                       </a>
                       <div class="portfolio-caption">
                           <div class="portfolio-caption-heading">Titulo</div>
-                          <div class="portfolio-caption-subheading text-muted">detalle</div>
+                          <div class="portfolio-caption-subheading text-muted">una pieza funcional que combina diseño y utilidad en un objeto elegante y sofisticado.</div>
                       </div>
                   </div>
               </div>
@@ -98,7 +90,7 @@
                       </a>
                       <div class="portfolio-caption">
                           <div class="portfolio-caption-heading">Titulo</div>
-                          <div class="portfolio-caption-subheading text-muted">detalle</div>
+                          <div class="portfolio-caption-subheading text-muted">una silla minimalista y elegante que combina diseño y funcionalidad. Perfecta para cualquier espacio moderno</div>
                       </div>
                   </div>
               </div>
@@ -113,7 +105,7 @@
                       </a>
                       <div class="portfolio-caption">
                           <div class="portfolio-caption-heading">Titulo</div>
-                          <div class="portfolio-caption-subheading text-muted">detalle</div>
+                          <div class="portfolio-caption-subheading text-muted">una obra de arte única y sofisticada que desafía las convenciones del diseño tradicional de botellas</div>
                       </div>
                   </div>
               </div>
@@ -128,7 +120,7 @@
                       </a>
                       <div class="portfolio-caption">
                           <div class="portfolio-caption-heading">Titulo</div>
-                          <div class="portfolio-caption-subheading text-muted">detalle</div>
+                          <div class="portfolio-caption-subheading text-muted">un objeto práctico y estilizado que aporta un toque de diseño a cualquier espacio de almacenamiento</div>
                       </div>
                   </div>
               </div>
@@ -143,7 +135,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Titulo</div>
-                        <div class="portfolio-caption-subheading text-muted">detalle</div>
+                        <div class="portfolio-caption-subheading text-muted">una obra de arte que transmite una emoción y una historia, con una composición muy cuidadosa</div>
                     </div>
                 </div>
             </div>
@@ -158,7 +150,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Titulo</div>
-                        <div class="portfolio-caption-subheading text-muted">detalle</div>
+                        <div class="portfolio-caption-subheading text-muted">Una obra de arte abstracta que combina patrones y colores en una composición armoniosa. Perfecto para dar vida a cualquier pared</div>
                     </div>
                 </div>
             </div>
@@ -173,7 +165,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Titulo</div>
-                        <div class="portfolio-caption-subheading text-muted">detalle</div>
+                        <div class="portfolio-caption-subheading text-muted"> pieza de cerámica que combina belleza y funcionalidad. Con un diseño elegante y acabado suave, este bowl es perfecto para cualquier mesa</div>
                     </div>
                 </div>
             </div>
@@ -188,7 +180,7 @@
                       </a>
                       <div class="portfolio-caption">
                           <div class="portfolio-caption-heading">Titulo</div>
-                          <div class="portfolio-caption-subheading text-muted">detalle</div>
+                          <div class="portfolio-caption-subheading text-muted"> pieza de cerámica que combina belleza y funcionalidad. Con un diseño elegante y acabado suave, este bowl es perfecto para cualquier mesa</div>
                       </div>
                   </div>
               </div>
@@ -203,7 +195,7 @@
                       </a>
                       <div class="portfolio-caption">
                           <div class="portfolio-caption-heading">Titulo</div>
-                          <div class="portfolio-caption-subheading text-muted">detalle</div>
+                          <div class="portfolio-caption-subheading text-muted"> pieza de cerámica que combina belleza y funcionalidad. Con un diseño elegante y acabado suave, este bowl es perfecto para cualquier mesa</div>
                       </div>
                   </div>
               </div>
